# NeuralNetwork

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.sh  loss_log.csv  plot.py  todo.md
dataset/: xor_hot.csv
dataset/mnist/: show_mnist.py
src/: cli.cpp  cli.hpp  dataset.cpp  dataset.hpp  dump.cpp  dump.hpp  functions.hpp  main.cpp  network.hpp  types.hpp
